Fixed a problem tokenizing CSS files where class names containing a colon looked like style definitions. Squiz ColonSpacingSniff now ensures it is only checking style definitions in CSS files and not class names
git-svn-id: http://svn.php.net/repository/pear/packages/PHP_CodeSniffer/trunk@287631 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/CodeSniffer/Standards/Squiz/Tests/CSS/ColonSpacingUnitTest.css
+++ b/CodeSniffer/Standards/Squiz/Tests/CSS/ColonSpacingUnitTest.css
@@ -8,3 +8,11 @@ margin-top:
 margin-bottom: 
 0px;
 }
+
+.TableWidgetType .recover:hover {
+    background-color: #FFF;
+}
+
+#clearCache-settings:rootNodes-list_0 {
+    border-top: none;
+}
