--- a/CodeSniffer/Standards/Squiz/Tests/CSS/SemicolonSpacingUnitTest.css
+++ b/CodeSniffer/Standards/Squiz/Tests/CSS/SemicolonSpacingUnitTest.css
@@ -6,3 +6,11 @@
 #MetadataAdminScreen-addField-add {
     float: left ;
 }
+
+.TableWidgetType .recover:hover {
+    background-color: #FFF;
+}
+
+#clearCache-settings:rootNodes-list_0 {
+    border-top: none;
+}
